# rstream

./: README.md
client/: .gitignore  CMakeLists.txt  build.gradle  download_gst.sh  libraries_shared.cmake  libraries_static.cmake  settings.gradle
client/app/: build.gradle  proguard-rules.pro
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/gst/android/demo/: ConnectActivity.kt  ConnectDialog.kt  HostAdapter.kt  MainMenuActivity.kt  MainMenuScreen.kt  PinDialog.kt  ServerListener.kt  SettingsActivity.kt  SettingsScreen.kt  StreamingActivity.kt  StreamingApplication.kt
client/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
client/app/src/main/res/layout/: activity_connect.xml  activity_main_menu.xml  activity_settings.xml  dialog_bitrate_slider.xml  dialog_pin.xml  host_item.xml
client/app/src/main/res/menu/: bitrate_menu.xml  framerate_menu.xml  video_quality_menu.xml
client/app/src/main/res/values/: strings.xml
client/gstreamer_android/: CMakeLists.txt  gstreamer_android.c
client/gstreamer_java/: build.gradle
client/src/: CMakeLists.txt  EglData.cpp  EglData.hpp  egl_data.cpp  egl_data.hpp  input.cpp  input.h  main.cpp  state.h
client/src/stream/: CMakeLists.txt  connection.c  connection.h  gst_common.h  input.h  sample.h  status.h  stream_app.c  stream_app.h  stream_config.h  thread.c  thread.h
client/src/stream/render/: GLDebug.cpp  GLError.cpp  GLSwapchain.cpp  gl_debug.cpp  gl_debug.h  gl_error.cpp  gl_error.h  gl_swapchain.cpp  gl_swapchain.h  render.cpp  render.hpp  render_api.h
client/src/stream/utils/: logger.h  platform.h
server/: Cargo.toml  build.rs
server/src/: discovery.rs  input.rs  main.rs  stream.rs
server/src/gui/: app.rs  config.rs
