[package]
name = "rstream-server"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.24.2"
async-tungstenite = "0.31.0"
futures = "0.3.31"
async-std = "1.13.2"
enigo = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vigem-client = "0.1.4"
rusty_enet = "0.4"
bincode = "1.3"
byteorder = "1.4"