[package]
name = "rstream-server"
version = "0.1.0"
authors = ["floppyhammer <tannhauser_chen@outlook.com>"]
edition = "2021"

[dependencies]
# Gives us egui, epi and web+native backends.
eframe = "0.27.2"
chrono = "0.4.19"
# File dialogs.
rfd = "0.14.1"

tray-icon = "0.14.3"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
winit = "0.29.15"

gstreamer = "0.24.2"
async-tungstenite = "0.31.0"
futures = "0.3.31"
async-std = "1.13.2"
enigo = "0.6.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.145"
vigem-client = "0.1.4"
rusty_enet = "0.4"
bincode = "1.3"
byteorder = "1.4"
rand = "0.8.5"

[features]
default = []
# Enable if you want to persist app state on shutdown.
persistence = ["eframe/persistence", "serde"]
